--- a/EvoGameAppp/Base.lproj/Main.storyboard
+++ b/EvoGameAppp/Base.lproj/Main.storyboard
@@ -1,24 +1,165 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MiW-Cc-Ed8">
+    <device id="retina6_12" orientation="landscape" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Onboarding View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="OnboardingViewController" customModule="EvoGameAppp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="epI-EQ-4FQ">
+                                <rect key="frame" x="42.666666666666686" y="29.333333333333343" width="766.66666666666652" height="295"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rMH-ok-yz6">
+                                    <size key="itemSize" width="766.66666666666652" height="261"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OnboardingCollectionViewCell" id="HHO-j3-LOS" customClass="OnboardingCollectionViewCell" customModule="EvoGameAppp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="17" width="766.66666666666652" height="261"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="nkj-TQ-R3e">
+                                            <rect key="frame" x="0.0" y="0.0" width="766.66666666666652" height="261"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YIs-lo-bUa">
+                                                    <rect key="frame" x="249" y="1.3333333333333286" width="269" height="149"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is Some Random Headline" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jc9-Fa-Tlq">
+                                                    <rect key="frame" x="0.0" y="159.33333333333334" width="766.66666666666663" height="47"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nxd-Iq-2WD">
+                                                    <rect key="frame" x="0.0" y="199" width="766.66666666666663" height="39"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="jc9-Fa-Tlq" firstAttribute="height" secondItem="nkj-TQ-R3e" secondAttribute="height" multiplier="0.180077" id="3nd-eD-O9u"/>
+                                                <constraint firstItem="YIs-lo-bUa" firstAttribute="centerX" secondItem="nkj-TQ-R3e" secondAttribute="centerX" id="47M-3N-gLg"/>
+                                                <constraint firstItem="YIs-lo-bUa" firstAttribute="centerY" secondItem="nkj-TQ-R3e" secondAttribute="centerY" multiplier="0.58" id="5Sj-Wb-tXe"/>
+                                                <constraint firstAttribute="trailing" secondItem="jc9-Fa-Tlq" secondAttribute="trailing" id="91K-VQ-1On"/>
+                                                <constraint firstItem="YIs-lo-bUa" firstAttribute="width" secondItem="nkj-TQ-R3e" secondAttribute="width" multiplier="0.35087" id="D7r-a0-PPo"/>
+                                                <constraint firstItem="jc9-Fa-Tlq" firstAttribute="centerY" secondItem="nkj-TQ-R3e" secondAttribute="centerY" multiplier="1.4" id="GPF-os-WmB"/>
+                                                <constraint firstItem="Nxd-Iq-2WD" firstAttribute="height" secondItem="nkj-TQ-R3e" secondAttribute="height" multiplier="0.149425" id="Z00-u4-f0r"/>
+                                                <constraint firstItem="Nxd-Iq-2WD" firstAttribute="top" secondItem="jc9-Fa-Tlq" secondAttribute="bottom" constant="-7.3333333333333428" id="aSS-2s-OfL"/>
+                                                <constraint firstItem="jc9-Fa-Tlq" firstAttribute="leading" secondItem="nkj-TQ-R3e" secondAttribute="leading" id="fDz-vm-eyR"/>
+                                                <constraint firstItem="Nxd-Iq-2WD" firstAttribute="leading" secondItem="nkj-TQ-R3e" secondAttribute="leading" id="gmH-vZ-wic"/>
+                                                <constraint firstAttribute="trailing" secondItem="Nxd-Iq-2WD" secondAttribute="trailing" id="mUB-sD-X2J"/>
+                                                <constraint firstAttribute="bottom" secondItem="Nxd-Iq-2WD" secondAttribute="bottom" constant="23" id="pbi-cy-4W7"/>
+                                                <constraint firstItem="YIs-lo-bUa" firstAttribute="height" secondItem="nkj-TQ-R3e" secondAttribute="height" multiplier="0.570881" id="raO-6V-hla"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="766.66666666666652" height="261"/>
+                                        <connections>
+                                            <outlet property="slideDescriptionLabel" destination="Nxd-Iq-2WD" id="xJG-Rm-3FF"/>
+                                            <outlet property="slideImageView" destination="YIs-lo-bUa" id="ScR-Yj-QVV"/>
+                                            <outlet property="slideTitleLabel" destination="jc9-Fa-Tlq" id="q3b-D5-nll"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="E41-IH-eQg"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="h20-Nx-lHq"/>
+                                </connections>
+                            </collectionView>
+                            <pageControl opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="lz9-Se-O1O">
+                                <rect key="frame" x="325.33333333333331" y="332.33333333333331" width="201.33333333333331" height="39.333333333333314"/>
+                                <color key="currentPageIndicatorTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </pageControl>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="epI-EQ-4FQ" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.75" id="7bZ-am-aZT"/>
+                            <constraint firstItem="lz9-Se-O1O" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.23615" id="XQb-Dj-WU3"/>
+                            <constraint firstItem="lz9-Se-O1O" firstAttribute="top" secondItem="epI-EQ-4FQ" secondAttribute="bottom" constant="8" id="d0q-KB-rUw"/>
+                            <constraint firstItem="epI-EQ-4FQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ouM-FZ-zaA"/>
+                            <constraint firstItem="epI-EQ-4FQ" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.9" id="scd-bD-cuc"/>
+                            <constraint firstItem="lz9-Se-O1O" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.1" id="vEM-O8-bVe"/>
+                            <constraint firstItem="lz9-Se-O1O" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vxU-gT-GKJ"/>
+                            <constraint firstItem="epI-EQ-4FQ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.9" id="wpH-ry-4CD"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="epI-EQ-4FQ" id="efZ-LB-pYK"/>
+                        <outlet property="pageControl" destination="lz9-Se-O1O" id="sID-Ru-Zas"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="47.887323943661976" y="-2.2900763358778624"/>
+        </scene>
+        <!--Home View Controller-->
+        <scene sceneID="xat-RL-QLE">
+            <objects>
+                <viewController id="EhL-pC-TgR" customClass="HomeViewController" customModule="EvoGameAppp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="TVT-Bk-CNo">
+                        <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="bwK-77-XQY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ElC-54-zb5"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k5I-BV-DHI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1706.3380281690143" y="-2.2900763358778624"/>
+        </scene>
+        <!--Detailed View Controller-->
+        <scene sceneID="M8f-La-piS">
+            <objects>
+                <viewController id="aW8-jx-XKx" customClass="DetailedViewController" customModule="EvoGameAppp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9Wg-Gj-etI">
+                        <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="zNA-ui-Brz"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ePD-cG-a1l"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NK2-1T-IKv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2765" y="-2"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="h9H-7R-RnS">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MiW-Cc-Ed8" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="egd-nN-AIB">
+                        <rect key="frame" x="0.0" y="59" width="852" height="32"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="EhL-pC-TgR" kind="relationship" relationship="rootViewController" id="v6c-mR-j5l"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8ub-hl-v8l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="955.63380281690149" y="-2.2900763358778624"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
