--- a/EvoGameAppp/Base.lproj/Main.storyboard
+++ b/EvoGameAppp/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MiW-Cc-Ed8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="WBJ-PS-Pck">
     <device id="retina6_12" orientation="landscape" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -104,7 +105,49 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="151" y="-2"/>
+            <point key="canvasLocation" x="-1865" y="-2"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="GbR-XW-d3m">
+            <objects>
+                <viewController id="aw6-Ac-Ngg" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hAz-Fx-sa7">
+                        <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding1" translatesAutoresizingMaskIntoConstraints="NO" id="ORx-Uq-2vU">
+                                <rect key="frame" x="59" y="0.0" width="793" height="393"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YXI-me-mST">
+                                <rect key="frame" x="218" y="257.66666666666669" width="75" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="">
+                                    <backgroundConfiguration key="background" image="ContinueButton" imageContentMode="scaleAspectFit"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="42i-j0-PhY" kind="push" id="dBa-5j-U45"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Jch-Le-R9i"/>
+                        <constraints>
+                            <constraint firstItem="YXI-me-mST" firstAttribute="centerY" secondItem="hAz-Fx-sa7" secondAttribute="centerY" multiplier="1.4" id="6Wl-ct-S4l"/>
+                            <constraint firstItem="YXI-me-mST" firstAttribute="width" secondItem="ORx-Uq-2vU" secondAttribute="width" multiplier="0.0945776" id="K3h-Ei-xsJ"/>
+                            <constraint firstItem="ORx-Uq-2vU" firstAttribute="top" secondItem="Jch-Le-R9i" secondAttribute="top" id="azY-B6-zL5"/>
+                            <constraint firstItem="YXI-me-mST" firstAttribute="height" secondItem="ORx-Uq-2vU" secondAttribute="height" multiplier="0.0890585" id="b60-oG-kfl"/>
+                            <constraint firstAttribute="bottom" secondItem="ORx-Uq-2vU" secondAttribute="bottom" id="fbr-rA-NVt"/>
+                            <constraint firstAttribute="trailing" secondItem="ORx-Uq-2vU" secondAttribute="trailing" id="tcQ-0Z-ZTI"/>
+                            <constraint firstItem="ORx-Uq-2vU" firstAttribute="leading" secondItem="Jch-Le-R9i" secondAttribute="leading" id="uOp-Bz-dyS"/>
+                            <constraint firstItem="YXI-me-mST" firstAttribute="centerX" secondItem="hAz-Fx-sa7" secondAttribute="centerX" multiplier="0.6" id="vsC-zC-ivH"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="jq3-9M-Bx0"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HY9-Ks-Pii" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-264.78873239436621" y="-2.2900763358778624"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="xat-RL-QLE">
@@ -117,10 +160,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="ElC-54-zb5"/>
+                    <nil key="simulatedTopBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k5I-BV-DHI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1706.3380281690143" y="-2.2900763358778624"/>
+            <point key="canvasLocation" x="1901" y="-2"/>
         </scene>
         <!--Detailed View Controller-->
         <scene sceneID="M8f-La-piS">
@@ -136,28 +180,117 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NK2-1T-IKv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2478" y="-2"/>
+            <point key="canvasLocation" x="2658" y="-2"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="t6J-8x-JT9">
+            <objects>
+                <viewController id="42i-j0-PhY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sTk-Q6-FZD">
+                        <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding2" translatesAutoresizingMaskIntoConstraints="NO" id="1K3-hY-At0">
+                                <rect key="frame" x="59" y="0.0" width="793" height="393"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KYI-GW-MdY">
+                                <rect key="frame" x="175.66666666666666" y="257.66666666666669" width="75" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="">
+                                    <backgroundConfiguration key="background" image="ContinueButton" imageContentMode="scaleAspectFit"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="z0c-rz-gFQ" kind="push" id="tya-Jq-Dfc"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="8CP-ie-LwM"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="1K3-hY-At0" firstAttribute="top" secondItem="8CP-ie-LwM" secondAttribute="top" id="0p7-c6-WTV"/>
+                            <constraint firstAttribute="bottom" secondItem="1K3-hY-At0" secondAttribute="bottom" id="1Ei-C6-AC3"/>
+                            <constraint firstItem="KYI-GW-MdY" firstAttribute="width" secondItem="1K3-hY-At0" secondAttribute="width" multiplier="0.0945776" id="3IW-7X-NcW"/>
+                            <constraint firstItem="KYI-GW-MdY" firstAttribute="height" secondItem="1K3-hY-At0" secondAttribute="height" multiplier="0.0890585" id="DTH-oP-7o7"/>
+                            <constraint firstItem="KYI-GW-MdY" firstAttribute="centerX" secondItem="sTk-Q6-FZD" secondAttribute="centerX" multiplier="0.5" id="Fh3-u0-8PU"/>
+                            <constraint firstAttribute="trailing" secondItem="1K3-hY-At0" secondAttribute="trailing" id="kGM-W0-2hy"/>
+                            <constraint firstItem="1K3-hY-At0" firstAttribute="leading" secondItem="8CP-ie-LwM" secondAttribute="leading" id="vtx-Da-H1X"/>
+                            <constraint firstItem="KYI-GW-MdY" firstAttribute="centerY" secondItem="sTk-Q6-FZD" secondAttribute="centerY" multiplier="1.4" id="ymZ-JX-gcp"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="myW-YG-asO"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L69-zL-A0g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="411.26760563380282" y="-2.2900763358778624"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Hyu-Nd-1Wl">
+            <objects>
+                <viewController id="z0c-rz-gFQ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="P04-jq-UnW">
+                        <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding3" translatesAutoresizingMaskIntoConstraints="NO" id="Hhy-Q5-awC">
+                                <rect key="frame" x="59" y="0.0" width="793" height="393"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Caz-ex-88Z">
+                                <rect key="frame" x="196.66666666666666" y="218.33333333333334" width="74.999999999999972" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="">
+                                    <backgroundConfiguration key="background" image="ContinueButton" imageContentMode="scaleAspectFit"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="EhL-pC-TgR" kind="push" id="Jsr-7H-vAa"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="BBf-gA-RDI"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Hhy-Q5-awC" firstAttribute="leading" secondItem="BBf-gA-RDI" secondAttribute="leading" id="5od-DC-Btc"/>
+                            <constraint firstAttribute="bottom" secondItem="Hhy-Q5-awC" secondAttribute="bottom" id="8sT-xe-byi"/>
+                            <constraint firstAttribute="trailing" secondItem="Hhy-Q5-awC" secondAttribute="trailing" id="A6X-ZF-cJG"/>
+                            <constraint firstItem="Caz-ex-88Z" firstAttribute="height" secondItem="Hhy-Q5-awC" secondAttribute="height" multiplier="0.0890585" id="EYu-JZ-jrF"/>
+                            <constraint firstItem="Caz-ex-88Z" firstAttribute="centerY" secondItem="P04-jq-UnW" secondAttribute="centerY" multiplier="1.2" id="Ti6-qO-pH9"/>
+                            <constraint firstItem="Caz-ex-88Z" firstAttribute="centerX" secondItem="P04-jq-UnW" secondAttribute="centerX" multiplier="0.55" id="Vtp-FE-4GU"/>
+                            <constraint firstItem="Caz-ex-88Z" firstAttribute="width" secondItem="Hhy-Q5-awC" secondAttribute="width" multiplier="0.0945776" id="pIa-Ul-ZU9"/>
+                            <constraint firstItem="Hhy-Q5-awC" firstAttribute="top" secondItem="BBf-gA-RDI" secondAttribute="top" id="u0d-X0-cAg"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="zyc-Jp-nq9"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OUz-qy-2lG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1051.4084507042255" y="-2.2900763358778624"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="h9H-7R-RnS">
+        <scene sceneID="AEX-Rt-ZmJ">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MiW-Cc-Ed8" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="WBJ-PS-Pck" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="egd-nN-AIB">
-                        <rect key="frame" x="0.0" y="59" width="852" height="32"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hpJ-xf-eia">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="EhL-pC-TgR" kind="relationship" relationship="rootViewController" id="v6c-mR-j5l"/>
+                        <segue destination="aw6-Ac-Ngg" kind="relationship" relationship="rootViewController" id="mSN-tt-dVO"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8ub-hl-v8l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jqY-Sz-zJr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="955.63380281690149" y="-2.2900763358778624"/>
+            <point key="canvasLocation" x="-1015.492957746479" y="-2.2900763358778624"/>
         </scene>
     </scenes>
     <resources>
+        <image name="ContinueButton" width="710" height="210"/>
+        <image name="Onboarding1" width="3840" height="2160"/>
+        <image name="Onboarding2" width="3840" height="2160"/>
+        <image name="Onboarding3" width="3840" height="2160"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
